# Medicine

./: .gitignore  config.py  dataset_structure.md  debug.ipynb  debug.py  legacy_trainer.py  main.py  pyproject.toml  requirements.txt  trainer.py  verify_dimensions.py
dataset/: base_dataset.py  dataset.py  dataset_log.py  dataset_metric.py  dataset_trace.py  log.py  metric.py  utils.py
dataset/drain3/: __init__.py  drain.py  kafka_persistence.py  masking.py  persistence_handler.py  redis_persistence.py  simple_profiler.py  template_miner.py  template_miner_config.py
model/: encoder.py  fusion.py
