[project]
name = "medicine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "cachetools>=6.0.0",
    "fastparquet>=2024.11.0",
    "jsonpickle>=4.1.1",
    "jupyter>=1.1.1",
    "modelscope>=1.27.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "simplejson>=3.20.1",
    "sortedcontainers>=2.4.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "typer>=0.16.0",
]
